--- a/calendar.html
+++ b/calendar.html
@@ -136,7 +136,7 @@
 
                 <div class="news_continer">
                     <div class="calen-list">
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="ext_calen_noimage">
@@ -165,7 +165,7 @@
 
                                 </div>
                         </div>
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="ext_calen_noimage">
@@ -188,7 +188,7 @@
                                     </div>
                                 </div>
                         </div>
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="ext_calen_noimage">
@@ -211,7 +211,7 @@
                                     </div>
                                 </div>
                         </div>
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="calen-pic"><a href="calendar_more1.html"><img src="images/eventa07.jpg"></a></div>
@@ -231,7 +231,7 @@
                                 </div>
                         </div>
 
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="calen-pic"><a href="calendar_more2.html"><img src="images/eventa08.jpg"></a></div>
@@ -251,7 +251,7 @@
                                 </div>
                         </div>
 
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="calen-pic"><a href="calendar_more3.html"><img src="images/eventa09.jpg"></a></div>
@@ -270,7 +270,7 @@
                                     </div>
                                 </div>
                         </div>
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="calen-pic"><a href="calendar_more4.html"><img src="images/eventa10.jpg"></a></div>
@@ -289,7 +289,7 @@
                                     </div>
                                 </div>
                         </div>
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="calen-pic"><a href="calendar_more5.html"><img src="images/eventa11.jpg"></a></div>
@@ -309,7 +309,7 @@
                                 </div>
                         </div>
 
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="calen-pic"><a href="calendar_more6.html"><img src="images/eventa01.png"></a></div>
@@ -329,7 +329,7 @@
                                 </div>
                         </div>
 
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="calen-pic"><a href="calendar_more7.html"><img src="images/eventa02.png"></a></div>
@@ -349,7 +349,7 @@
                                 </div>
                         </div>
 
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="calen-pic"><a href="calendar_more8.html"><img src="images/eventa03.png"></a></div>
@@ -369,7 +369,7 @@
                                 </div>
                         </div>
 
-                        <div class="calen-card-box">
+                        <div class="calen-card-box col-6 col-md-4">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
                                     <div class="calen-pic"><a href="calendar_more9.html"><img src="images/eventa04.jpg"></a></div>
