--- a/sitemap.html
+++ b/sitemap.html
@@ -105,7 +105,7 @@
         </header>
         <article>
             <div class="card-Parallax">
-                <div class="m-page-headerbg"></div>
+                <div class="m-page-sitemap_bn"></div>
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">全站導覽</div>
