--- a/images/test.html
+++ b/images/test.html
@@ -17,15 +17,15 @@
          gtag('js', new Date());
          gtag('config', 'UA-129276774-1');
       </script>
-      <link rel="icon" type="image/png" href="images/bs.png" />
-      <link rel="stylesheet" href="css/main.css">
-      <link rel="stylesheet" href="bower_components/mdi/css/materialdesignicons.min.css">
+      <link rel="icon" type="image/png" href="bs.png" />
+      <link rel="stylesheet" href="../css/main.css">
+      <link rel="stylesheet" href="../bower_components/mdi/css/materialdesignicons.min.css">
       <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
-      <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-      <script src="dist/js/jquery-3.2.1.min.js"></script>
+      <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
+      <script src="../dist/js/jquery-3.2.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-      <script src="dist/js/jquery.scroll-with-ease.js"></script>
-      <script src="dist/js/main.js"></script>
+      <script src="../dist/js/jquery.scroll-with-ease.js"></script>
+      <script src="../dist/js/main.js"></script>
       <script type="text/javascript">
          $( document ).ready(function() {
            pageinit();
@@ -36,10 +36,10 @@
 
          $(window).on('scroll', checkSideLabel);
       </script>
-      <link rel="stylesheet" href="https://www.tainex2.com.tw/jquery-ui.min.css" type=text/css>
-      <link rel="stylesheet" href="https://www.tainex2.com.tw/ck-editor.css" type=text/css>
-      <link rel="stylesheet" href="https://www.tainex2.com.tw/cindy.css" type=text/css>
-      <script src="https://www.tainex2.com.tw/jquery-ui.min.js"></script>
+      <link rel="stylesheet" href="../jquery-ui.min.css" type=text/css>
+      <link rel="stylesheet" href="../ck-editor.css" type=text/css>
+      <link rel="stylesheet" href="../cindy.css" type=text/css>
+      <script src="../jquery-ui.min.js"></script>
    </head>
    <body>
       <div class="pagemask"></div>
@@ -1340,6 +1340,6 @@
             </div>
          </footer>
       </div>
-      <script src="https://www.tainex2.com.tw/cindy.js"></script>
+      <script src="../cindy.js"></script>
    </body>
 </html>
