--- a/landingpage.html
+++ b/landingpage.html
@@ -36,7 +36,7 @@
       <ul>
         <li><span>展覽空間</span>2,014個準攤位</li>
         <li><span>會議空間</span>17間</li>
-        <li class="og"><span>雲端展場</span>3,880m<sup>2</sup>客製作尺寸無柱空間</li>
+        <li class="og"><span>星光會議中心</span>3,880m<sup>2</sup>可調整，無柱空間</li>
       </ul>
       <div class="btn enter"><a href="https://www.tainex2.com.tw/">ENTER</a></div>
     </div>
