--- a/landingpage.html
+++ b/landingpage.html
@@ -17,14 +17,14 @@
 </head>
 
 <body>
-
+  <div class="logo50"><a href="."><img src="images/logo50.svg"></a></div>
   <div class="langing_title"><img src="images/landing_title.png" alt="TaiNEX - Taipei Nangang Exhibition Center"></div>
   <div class="langing_content">
     <div class="exblock e1">
       <h1><img src="images/landing_t1.png" alt="TaiNEX1 台北南港轢覽館1館"></h1>
       <h2><span>2008</span>年正式營運</h2>
       <ul>
-        <li><span>展覽空間</span>2,467個準攤位</li>
+        <li><span>展覽空間</span>2,467個標準攤位</li>
         <li><span>會議空間</span>21間</span></li>
         <li class="og"><span>雲端展場</span>22,680m<sup>2</sup>無柱空間</li>
       </ul>
@@ -34,7 +34,7 @@
       <h1><img src="images/landing_t2.png" alt="TaiNEX2 台北南港轢覽館2館"></h1>
       <h2><span>2019</span>年正式營運</h2>
       <ul>
-        <li><span>展覽空間</span>2,014個準攤位</li>
+        <li><span>展覽空間</span>2,014個標準攤位</li>
         <li><span>會議空間</span>17間</li>
         <li class="og"><span>星光會議中心</span>3,880m<sup>2</sup>可調整，無柱空間</li>
       </ul>
