--- a/landingpage.html
+++ b/landingpage.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="bower_components/mdi/css/materialdesignicons.min.css">
   <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/landing.css">
+  <link rel="stylesheet" href="css/landing.css?0221">
   <script src="dist/js/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
   <script src="dist/js/jquery.scroll-with-ease.js"></script>
