motifly add face id

--- a/facerecognition.html
+++ b/facerecognition.html
@@ -10,19 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="dist/js/jquery-3.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-    <script src="dist/js/jquery.scroll-with-ease.js"></script>
-    <script src="dist/js/main.js"></script>
     <title></title>
-    <script type="text/javascript">
-
-      $( document ).ready(function() {
-        initOrganizers()
-        $(window).on('scroll', function(e) {
-            checkOrganAnim()
-          });
-      });
-    </script>
 
 </head>
 
@@ -120,109 +108,54 @@
                 <div class="m-page-headerbg"></div>
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
-                        <div class="page_headtitle">租借場地</div>
-                        <div class="page_headtext">台北南港展覽2館擁有專業化的大型場地空間，提供展覽空間、會議舉辦、各式活動的需求</div>
+                        <div class="page_headtitle">人臉辨識</div>
+                        <div class="page_headtext">人臉辨識</div>
                     </div>
                 </div>
 
             </div>
             <div class="m-page_wrapper">
-                <div class="breadcrumb_title">租借場地</div>
+                <div class="breadcrumb_title">裝潢商人臉辨識註冊</div>
                 <div class="twtbreadcrumb">
                     <ul>
                         <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li class="activeddd">租借場地</li>
+                        <li class="activeddd">人臉辨識</li>
                     </ul>
                 </div>
             </div>
-            <div class="pace_bok">
-                <a href="organizers_item1.html"><div class="bok-pic lili_pic01"></div></a>
-                <div class="bok-pic00 bok_rp">
-                    <div class="lili_box">
-                        <div class="bok_title">展覽會場</div>
-                        <div class="bok_font">國家級規格雙層展覽空間提供專業級的服務</div>
-                        <a href="organizers_item1.html">
-                        <div class="bok_btn">立即前往</div>
+
+            <div class="orang_wrapper">
+
+                <div class="telecom">
+                    <div class="com">
+                    <div class="faceid">
+                        <a href="http://61.220.184.20/account/login">
+                            <ul>
+                                <li><img src="images/faceid.svg"></li>
+                                <li>人臉註冊系統</li>
+                            </ul>
                         </a>
                     </div>
-                </div>
-            </div>
-
-            <div class="pace_bok">
-                <div class="bok-pic00 bok_rp flix01">
-                    <div class="lili_box">
-                        <div class="bok_title">會議室</div>
-                        <div class="bok_font">全台唯一多功能可調整式大型會議空間</div>
-                        <a href="conference-room.html">
-                        <div class="bok_btn">立即前往</div>
-                        </a>
+                    </div>
+                    <div class="com">
+                        <div class="faceid">
+                            <a href="http://61.220.184.20/account/temporary_registration">
+                                <ul>
+                                    <li><img src="images/faceid2.svg"></li>
+                                    <li>臨時現場註冊<br>(僅當日有效)</li>
+                                </ul>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <a href="conference-room.html"><div class="bok-pic flix02 lili_pic02"></div></a>
+
+
+
+
+
             </div>
 
-            <div class="pace_bok">
-                <a href="public_space.html"><div class="bok-pic lili_pic03"></div></a>
-                <div class="bok-pic00 bok_rp">
-                    <div class="lili_box">
-                        <div class="bok_title">公共空間</div>
-                        <div class="bok_font">空中走廊及星光長廊完美造景呈現</div>
-                        <a href="public_space.html">
-                        <div class="bok_btn">立即前往</div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="pace_bok">
-                <div class="bok-pic00 bok_rp flix01">
-                    <div class="lili_box">
-                        <div class="bok_title">廣告刊登</div>
-                        <div class="bok_font">有效宣傳活動的行銷手法及廣告曝光</div>
-                        <a href="advertisements_ad.html">
-                        <div class="bok_btn">立即前往</div>
-                        </a>
-                    </div>
-                </div>
-                <a href="advertisements_ad.html"><div class="bok-pic flix02 lili_pic04"></div></a>
-            </div>
-            <div class="Vendor-resource_wrapper">
-                <div class="Vendor-resource_title">廠商資源</div>
-                <div class="Vendor_box">
-                    <!-- <a href="food.html">
-                        <div class="vendor_icon">
-                            <div class="ven_pic"><img src="images/bssin.svg"></div>
-                            <div class="ven_font">餐飲服務</div>
-                        </div>
-                    </a> -->
-                    <a href="safety_management.html">
-                        <div class="vendor_icon">
-                            <div class="ven_pic"><img src="images/bssin2.svg"></div>
-                            <div class="ven_font">安全管理</div>
-                        </div>
-                    </a>
-                    <a href="telecommunications.html">
-                        <div class="vendor_icon">
-                            <div class="ven_pic"><img src="images/bssin3.svg"></div>
-                            <div class="ven_font">電信服務</div>
-                        </div>
-                    </a>
-                    <a href="http://www.twtcnangang.com.tw/file/13/8/%E5%A4%96%E8%B2%BF%E5%8D%94%E6%9C%83%E6%8E%A8%E8%96%A6%E6%B0%B4%E9%9B%BB%E8%A3%9D%E6%BD%A2%E5%95%86%E8%81%AF%E7%B5%A1%E8%B3%87%E6%96%99.pdf">
-                        <div class="vendor_icon">
-                            <div class="ven_pic"><img src="images/bssin4.svg"></div>
-                            <div class="ven_font">水電服務</div>
-                        </div>
-                    </a>
-
-                    <a href="facerecognition.html">
-                        <div class="vendor_icon">
-                            <div class="ven_pic"><img src="images/faceid.svg"></div>
-                            <div class="ven_font">人臉辨識</div>
-                        </div>
-                    </a>
-                </div>
-            </div>
 
         </article>
 
