--- a/facerecognition.html
+++ b/facerecognition.html
@@ -152,6 +152,21 @@
 
 
 
+                <div class="importent">
+                ※ 貿協會展服務證有效期限至109年12月31日止，自110年1月1日起，進入南港1、2館及世貿1館施工人員將驗證職安卡，請裝潢廠商務必盡速取得臺北市勞動檢查處核發之職安卡。(申辦職安卡網址：https://oshcard.osha.gov.tw/)</div>
+
+                <div class="importent">※ 1間公司/廠商僅能以統編註冊1組帳號密碼，但可多人共用並上傳個人資料；未有統編之個人或工作室，請以身分證字號/護照號碼申請註冊。</div>
+                <div class="importent">※ 展館現場亦開放臨時註冊，但僅限當日有效，建議事先註冊加速入場施工。</div><br>
+                <div class="mod-organizer_title">※ 人臉辨識系統問題請聯繫：</div>
+
+                <div class="transport_point">
+                    <ul>
+                    <li>世貿1館：02-2725-5200 #2688 涂欣旺  hsing@taitra.org.tw</li>
+                    <li>南港1館：02-2725-5200 #5564 陳程雯  chenwendy@taitra.org.tw</li>
+                    <li>南港2館：02-2725-5200 #6621 林書涵  vicslin@taitra.org.tw</li>
+                    </ul>
+                </div>
+
 
 
             </div>
