--- a/facerecognition.html
+++ b/facerecognition.html
@@ -153,7 +153,7 @@
 
 
                 <div class="importent">
-                ※ 貿協會展服務證有效期限至109年12月31日止，自110年1月1日起，進入南港1、2館及世貿1館施工人員將驗證職安卡，請裝潢廠商務必盡速取得臺北市勞動檢查處核發之職安卡。(申辦職安卡網址：https://oshcard.osha.gov.tw/)</div>
+                ※ 貿協會展服務證有效期限至109年12月31日止，自110年1月1日起，進入南港1、2館及世貿1館施工人員將驗證職安卡，請裝潢廠商務必盡速取得臺北市勞動檢查處核發之職安卡。(申辦職安卡網址：<a href="https://oshcard.osha.gov.tw/">https://oshcard.osha.gov.tw/)</a></div>
 
                 <div class="importent">※ 1間公司/廠商僅能以統編註冊1組帳號密碼，但可多人共用並上傳個人資料；未有統編之個人或工作室，請以身分證字號/護照號碼申請註冊。</div>
                 <div class="importent">※ 展館現場亦開放臨時註冊，但僅限當日有效，建議事先註冊加速入場施工。</div><br>
