--- a/index_test.html
+++ b/index_test.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/main_3d.css">
     <link rel="stylesheet" href="bower_components/mdi/css/materialdesignicons.min.css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -524,23 +523,23 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="redbl">
-
                     <div class="dview_wrapper">
-                        <a href="https://livetour.istaging.com/?group=eac1f777-d6f1-4893-b970-ee0b0c8e6708&_ga=2.237695808.1919613753.1608608524-1709637376.1594284816" target="_blank">
-                            <div class="for_3dview">
+                        <div class="view_bg">
+                            <div class="view_font">3D全景實境現場</div>
+                            <div class="view_vr">
 
-                                <div class="mm360_viewd">
-                                    <img src="images/vricon.svg">
+                                <div class="goto_viewd">
+                                    <ul>
+                                        <li><a href="#"><img src="images/vricon.svg"></a></li>
+                                        <li>建置中</li>
+                                    </ul>
                                 </div>
-                                <div class="mm360_font">3D全景實境現場</div>
                             </div>
-                        </a>
+
+                        </div>
                     </div>
-
                 </div>
-
 
                 <div class="event_wrapper">
                     <div class="event_bigtitle">展會活動</div>
