--- a/index.html
+++ b/index.html
@@ -526,15 +526,13 @@
                 </div>
 
                 <div class="redbl">
-
+                    <div class="event_bigtitle">3D全景實境現場</div>
+                    <div class="evnt_sm_en">3D Virtual Tour</div></br>
+                    <!-- <div class="view_font">3D全景實境現場</div> -->
                     <div class="dview_wrapper">
                         <a href="https://livetour.istaging.com/?group=eac1f777-d6f1-4893-b970-ee0b0c8e6708&_ga=2.237695808.1919613753.1608608524-1709637376.1594284816" target="_blank">
                             <div class="for_3dview">
 
-                                <div class="mm360_viewd">
-                                    <img src="images/vricon.svg">
-                                </div>
-                                <div class="mm360_font">3D全景實境現場</div>
                             </div>
                         </a>
                     </div>
